working on user and org settings

--- a/apps/client/src/index.css
+++ b/apps/client/src/index.css
@@ -208,4 +208,38 @@ color utility to any element that depends on these defaults.
   body {
     @apply bg-background text-foreground;
   }
+
+  h1 {
+    font-size: 2rem;
+    line-height: 1.1;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+    line-height: 1.25;
+  }
+
+  h3 {
+    font-size: 1.25rem;
+    line-height: 1.25;
+  }
+
+  h4 {
+    font-size: 1.125rem;
+    line-height: 1.22222;
+  }
+
+  h5 {
+    font-size: 1rem;
+    line-height: 1.5;
+  }
+
+  h6 {
+    font-size: 0.875rem;
+    line-height: 1.57143;
+  }
+  
+  [role="tablist"] {
+    height: auto !important;
+  }
 }
